--- a/gb/20/1/8/n11776082.md
+++ b/gb/20/1/8/n11776082.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/lduuv275/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lduuv275/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lduuv275/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xcbfpq327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>元朗区议会设小组跟进7.21</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-320x200.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月08日讯】（大纪元记者张家熙香港综合报导）多个区<a href="https://github.com/lduuv275/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A.md">议会</a>7日举行首次会议，全部由民主派包揽正副主席。<a href="https://github.com/lduuv275/djy/blob/master/gb/tag/%E5%85%83%E6%9C%97%E5%8C%BA.md">元朗区</a><a href="https://github.com/lduuv275/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A.md">议会</a>在12位乡事派全部缺席或不投票下，通过成立工作小组跟进7.21事件。</p>
-<p><a href="https://github.com/lduuv275/djy/blob/master/gb/tag/%E5%85%83%E6%9C%97%E5%8C%BA.md">元朗区</a>议会7日举行首次会议，今届共有39名民选区议员，及6名由乡事委员会主席出任的当然议员。45名区议员中33人为民主派，其余12人为建制派及乡事派。多名民主派议员带同“追究7.21、彻查警暴”的标语开会。</p>
+	<p>【大纪元2020年01月08日讯】（大纪元记者张家熙香港综合报导）多个区<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A.md#1">议会</a>7日举行首次会议，全部由民主派包揽正副主席。<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%85%83%E6%9C%97%E5%8C%BA.md#1">元朗区</a><ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A.md#1">议会</a>在12位乡事派全部缺席或不投票下，通过成立工作小组跟进7.21事件。</p>
+<p><ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%85%83%E6%9C%97%E5%8C%BA.md#1">元朗区</a>议会7日举行首次会议，今届共有39名民选区议员，及6名由乡事委员会主席出任的当然议员。45名区议员中33人为民主派，其余12人为建制派及乡事派。多名民主派议员带同“追究7.21、彻查警暴”的标语开会。</p>
 <p>民主党黄伟贤和民主阵线麦业成在没有竞争下当选正副主席。黄伟贤出任主席后，要求全体议员起立，为过去半年为反送中运动离世的人士默哀一分钟，乡事派议员没有参与。</p>
 <p>元朗区议会随即举行特别会议，5位连任的民主派议员黄伟贤、麦业成、邝俊宇、陈美莲和杜嘉伦动议，要求成立“7.21元朗西铁站白衣暴徒无差别袭击市民事件工作小组”跟进。</p>
 <p>多名乡事派有发言，其中黎永添仍称事件因“林卓廷带队入元朗”而起，引起哗然，邝俊宇提醒黎，议员要为自己发言负责任，请他收回“林卓廷带队入元朗”言论，黎永添收回有关字眼。</p>
@@ -22,43 +22,47 @@
 <p>有投票的受访选民中，47.4%表示，投票时考虑“政治议题”多些，26.6%表示考虑“民生议题”多些，另有24.7%表示“两者同样都考虑”。50.5%表示近期反对《逃犯条例》运动有影响他们的投票选择，47.2%表示没有受到影响。18.0%受访者表示自己是第一次在区议会选举中投票，82.0%则非首次投票。</p>
 <p>73.3%受访市民认为，经过今次区选后特区政府对市民意见的重视程度没有改变，只有14.5%认为重视程度会增加，更有8.2%认为会减少。43.6%受访市民认为区选结果不利“政府施政”，35.0%认为“没有影响”；40.0%受访市民认为结果有利“稳定当前政局”，34.2%认为“没有影响”；60.4%受访者认为结果有利“推动香港民主发展”，18.2%认为“没有影响”。◇</p>
 <p>责任编辑：李薇</p>
-
+	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/8/n11776082.htm">元朗区议会设小组跟进7.21</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719438.htm">反送中半年 中环超4万人集会“齐上齐落”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/3/n11697465.htm">王友群：中央政法委在香港制造“暴乱”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/27/n11683728.htm">从时间节点看中共如何抹黑香港抗争者（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/24/n11677882.htm">港人不屈服 中共政法委全面介入港务遇挫</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11680998.htm">民主派区选大胜促回应诉求</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/25/n11678234.htm">港选举示民意 撑反送中者获胜 挺警者落败</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/22/n11604819.htm">组图：港民纪念元朗事件 港警狂放催泪弹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/20/n11534673.htm">【更新】9.21屯门游行 警射催泪弹抓多人</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11773958.htm">美军52架F-35战机“大象漫步” 声势浩大</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11773877.htm">【翻墙必看】骆惠宁见记者 腿不停颤抖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11774497.htm">伊朗将军葬礼发生踩踏事件 至少56死逾200伤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11773571.htm">官方公布免职前 王志民已低调离港</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737632.htm">自伐者无功！三国谋士许攸的教训</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732566.htm">2020金水流年对哪些人最有利？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770292.htm">苏州十全街发生大面积塌陷 店铺已搬空</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772655.htm">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11770899.htm">大陆又一平台爆雷 涉资千亿 近二百万人受害</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/7/n11775117.htm">【新闻看点】美伊激烈冲突背后的中共因素</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726378.htm">【三国英雄】父兄遇害 腹背受敌 曹操如何应对</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766171.htm">【胡乃文开讲】消口臭其实很简单！中医教你1招除臭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770242.htm">在美产子引爱国争议 章子怡发文分享哺乳经验</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770148.htm">范冰冰亮相美食节 遇见人生中两位重要人物</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11770031.htm">获悉陈豪刚从武汉返港 李佳芯活动上大惊失色</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11769744.htm">BTS成首个包揽金唱片奖音源及唱片大奖歌手</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11771024.htm">胞兄一家3口离世 明道痛发声明：震惊与难过</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/9/20/n11534673.md#1">【更新】9.21屯门游行 警射催泪弹抓多人</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/10/22/n11604819.md#1">组图：港民纪念元朗事件 港警狂放催泪弹</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/11/24/n11677882.md#1">港人不屈服 中共政法委全面介入港务遇挫</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/11/25/n11678234.md#1">港选举示民意 撑反送中者获胜 挺警者落败</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/20/1/8/n11776082.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12501740.md#1">【重播】美国大选日 17小时接力直播</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525168.md#1">【珍言真语】记者忆采访被刺：报真相不退缩</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522655.md#1">【横河观点】一场对决的大选 美国能否回归传统</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520354.md#1">【图解】2020美国大选 投票结果何时出</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520247.md#1">华为副总裁深圳猝死 曾在伦敦当记者</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520656.md#1">邓超上火获9岁儿支招 网友：父子似互换角色</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520485.md#1">足底筋膜炎4招改善！症状、治疗和复健全图解</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/8/n11776082.htm">元朗区议会设小组跟进7.21</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/20/1/8/n11776082.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
